--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "bootstrap": "lerna bootstrap",
     "lint-ci": "lerna run lint-ci",
     "prepare": "npm run symlink && npm run clean-build",
-    "pub": "npm install && npm test && lerna publish",
+    "pub-version": "lerna version --conventional-commits",
+    "pub-version-pre": "lerna version --conventional-prerelease",
+    "pub-version-grad": "lerna version --conventional-graduate",
+    "pub": "npm install && npm test && lerna publish from-git",
     "symlink": "node build_tools/bin/symlink.js packages",
     "test-spec": "lerna run test-spec",
     "test-ts": "lerna run test-ts",
