--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,6 +2,7 @@ name: Lint
 on:
   pull_request:
     paths:
+      - ".github/workflows/lint.yml"
       - "**/tslint.json"
       - "**/tsconfig.json"
       - "**/.eslintrc.js"
@@ -10,6 +11,7 @@ on:
       - "**/*.ts"
   push:
     paths:
+      - ".github/workflows/lint.yml"
       - "**/tslint.json"
       - "**/tsconfig.json"
       - "**/.eslintrc.js"
@@ -22,6 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2.1.2
     - run: npm ci
     - run: npm run lint-ci
     - run: |
