chore: Add ESLint and Prettier to cspell-trie

--- a/packages/cspell-trie/.npmignore
+++ b/packages/cspell-trie/.npmignore
@@ -14,12 +14,12 @@
 /temp
 /coverage
 /images
-/tmp
+/temp
 **/*.test.*
 **/*.spec.*
 
 # Ignore non distribution files
 tsconfig.json
-tslint.json
+.eslint*
 jest.config.js
 *.log
