--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -16,8 +16,8 @@
   ],
   "scripts": {
     "clean": "rimraf dist",
-    "lint": "tslint --force --format verbose \"src/**/*.ts\"",
-    "lint-ci": "tslint \"src/**/*.ts\"",
+    "lint": "eslint --fix .",
+    "lint-ci": "eslint .",
     "build": "npm run compile",
     "clean-build": "npm run clean && npm run build",
     "compile": "tsc -p .",
@@ -66,6 +66,13 @@
     "node": ">=12.0.0"
   },
   "devDependencies": {
+    "@types/node": "^14.14.6",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
     "rimraf": "^3.0.2"
   }
 }
