--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "gen-coverage": "lerna run coverage --stream",
     "install": "lerna bootstrap --ci",
     "bootstrap": "lerna bootstrap",
-    "lint": "lerna run lint",
-    "lint-ci": "lerna run lint-ci",
+    "lint": "eslint . --fix",
+    "lint-ci": "eslint .",
     "prepare": "npm run symlink && npm run clean-build",
     "pub-version": "lerna version --conventional-commits",
     "pub-version-pre": "lerna version --conventional-prerelease",
