--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "cspell-dict-nl-nl": "^1.0.25",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.1",
     "lerna": "^3.22.1",
