ci: remove left over lint step

--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -23,7 +23,7 @@
     "coverage": "npm run generate-code-coverage",
     "generate-code-coverage": "jest --coverage",
     "test-watch": "jest --watch",
-    "prepublishOnly": "npm run lint && npm run clean-build && npm test",
+    "prepublishOnly": "npm run clean-build && npm test",
     "test": "jest"
   },
   "repository": {
