--- a/package.json
+++ b/package.json
@@ -46,39 +46,21 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "devDependencies": {
-    "@types/comment-json": "^1.1.1",
-    "@types/configstore": "^4.0.0",
     "@types/eslint": "^7.2.4",
-    "@types/fs-extra": "^9.0.2",
-    "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.15",
-    "@types/micromatch": "^4.0.1",
-    "@types/minimatch": "^3.0.3",
-    "@types/node": "^14.14.5",
     "@types/shelljs": "^0.8.8",
-    "@types/xregexp": "^4.3.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "ajv-cli": "^3.3.0",
-    "cspell-dict-en_us": "^1.2.30",
-    "cspell-dict-es-es": "^1.0.20",
-    "cspell-dict-nl-nl": "^1.0.25",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.1",
     "lerna": "^3.22.1",
-    "lorem-ipsum": "^2.0.3",
     "prettier": "^2.1.2",
-    "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
-    "source-map-support": "^0.5.19",
     "ts-jest": "^26.4.3",
-    "ts-json-schema-generator": "^0.77.0",
-    "ts-loader": "^8.0.7",
-    "typescript": "^4.0.5",
-    "webpack": "^5.3.0",
-    "webpack-cli": "^4.1.0"
+    "typescript": "^4.0.5"
   }
 }
