--- a/packages/cspell-glob/package.json
+++ b/packages/cspell-glob/package.json
@@ -40,9 +40,11 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
+    "@types/node": "^14.14.6",
     "micromatch": "^4.0.2"
   },
   "devDependencies": {
+    "@types/micromatch": "^4.0.1",
     "jest": "^26.6.1",
     "rimraf": "^3.0.2"
   }
