--- a/packages/cspell-io/package.json
+++ b/packages/cspell-io/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
+    "@types/node": "^14.14.6",
     "iconv-lite": "^0.6.2",
     "iterable-to-stream": "^1.0.1"
   },
@@ -40,6 +41,9 @@
     "node": ">=12.0.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.3",
+    "fs-extra": "^9.0.1",
+    "lorem-ipsum": "^2.0.3",
     "rimraf": "^3.0.2"
   }
 }
