--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -48,6 +48,8 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
+    "@types/fs-extra": "^9.0.3",
+    "@types/node": "^14.14.6",
     "comment-json": "^4.1.0",
     "configstore": "^5.0.1",
     "cspell-dict-aws": "^1.0.7",
@@ -96,7 +98,10 @@
     "node": ">=12.0.0"
   },
   "devDependencies": {
-    "cspell-tools": "^5.0.1-alpha.11",
-    "rimraf": "^3.0.2"
+    "@types/configstore": "^4.0.0",
+    "cspell-dict-nl-nl": "^1.0.25",
+    "lorem-ipsum": "^2.0.3",
+    "rimraf": "^3.0.2",
+    "ts-json-schema-generator": "^0.77.0"
   }
 }
