--- a/packages/cspell-trie-lib/package.json
+++ b/packages/cspell-trie-lib/package.json
@@ -33,12 +33,17 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
+    "fs-extra": "^9.0.1",
     "gensequence": "^3.1.1"
   },
   "engines": {
     "node": ">=12.0.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.3",
+    "@types/node": "^14.14.6",
+    "cspell-dict-en_us": "^1.2.30",
+    "cspell-dict-es-es": "^1.0.20",
     "rimraf": "^3.0.2"
   }
 }
