--- a/packages/cspell-util-bundle/package.json
+++ b/packages/cspell-util-bundle/package.json
@@ -39,7 +39,12 @@
   "devDependencies": {
     "jest": "^26.6.1",
     "rimraf": "^3.0.2",
+    "ts-loader": "^8.0.10",
     "webpack": "^5.3.2",
+    "webpack-cli": "^4.2.0"
+  },
+  "dependencies": {
+    "@types/xregexp": "^4.3.0",
     "xregexp": "^4.4.0"
   }
 }
