--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -49,13 +49,13 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
+    "@types/minimatch": "^3.0.3",
     "chalk": "^4.1.0",
     "commander": "^6.2.0",
     "comment-json": "^4.1.0",
     "cspell-glob": "^5.0.1-alpha.11",
     "cspell-lib": "^5.0.1-alpha.11",
     "fs-extra": "^9.0.1",
-    "gensequence": "^3.1.1",
     "get-stdin": "^8.0.0",
     "glob": "^7.1.6",
     "minimatch": "^3.0.4"
@@ -64,7 +64,8 @@
     "node": ">=12.0.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.6",
+    "@types/fs-extra": "^9.0.3",
+    "@types/glob": "^7.1.3",
     "rimraf": "^3.0.2"
   }
 }
