--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -87,12 +87,12 @@
     "cspell-dict-typescript": "^1.0.11",
     "cspell-io": "^5.0.1-alpha.11",
     "cspell-trie-lib": "^5.0.1-alpha.11",
-    "cspell-util-bundle": "^5.0.1-alpha.11",
     "fs-extra": "^9.0.1",
     "gensequence": "^3.1.1",
     "minimatch": "^3.0.4",
     "resolve-from": "^5.0.0",
-    "vscode-uri": "^2.1.2"
+    "vscode-uri": "^2.1.2",
+    "xregexp": "^4.4.0"
   },
   "engines": {
     "node": ">=12.0.0"
