--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -42,11 +42,11 @@
     "commander": "^6.2.0",
     "cspell-io": "^5.0.1-alpha.11",
     "cspell-trie-lib": "^5.0.1-alpha.11",
-    "cspell-util-bundle": "^5.0.1-alpha.11",
     "fs-extra": "^9.0.1",
     "gensequence": "^3.1.1",
     "glob": "^7.1.6",
-    "hunspell-reader": "^3.2.0"
+    "hunspell-reader": "^3.2.0",
+    "xregexp": "^4.4.0"
   },
   "engines": {
     "node": ">=12.0.0"
