--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -45,15 +45,21 @@
     "fs-extra": "^9.0.1",
     "gensequence": "^3.1.1",
     "glob": "^7.1.6",
-    "hunspell-reader": "^3.2.0",
-    "iconv-lite": "^0.6.2",
-    "minimatch": "^3.0.4"
+    "hunspell-reader": "^3.2.0"
   },
   "engines": {
     "node": ">=12.0.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.3",
+    "@types/glob": "^7.1.3",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
+    "@types/rimraf": "^3.0.0",
+    "@types/shelljs": "^0.8.8",
     "jest": "^26.6.3",
-    "rimraf": "^3.0.2"
+    "lorem-ipsum": "^2.0.3",
+    "rimraf": "^3.0.2",
+    "shelljs": "^0.8.4"
   }
 }
