--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "gen-coverage": "lerna run coverage --stream",
     "install": "lerna bootstrap --ci",
     "bootstrap": "lerna bootstrap",
-    "lint": "eslint . --fix && prettier -w \"**/*.md\"",
-    "lint-ci": "eslint . && prettier -c \"**/*.md\"",
+    "lint": "eslint . --fix && prettier -w \"**/*.{md,yaml,yml}\"",
+    "lint-ci": "eslint . && prettier -c \"**/*.{md,yaml,yml}\"",
     "prepare": "npm run symlink && npm run clean-build",
     "pub-version": "lerna version --conventional-commits",
     "pub-version-pre": "lerna version --conventional-prerelease",
