chore: Update Lint CI globs

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,20 +2,12 @@ name: Lint
 on:
   pull_request:
     paths:
-      - ".github/workflows/lint.yml"
-      - "**/tsconfig.json"
-      - "**/.eslintrc.js"
       - "**/.eslintignore"
-      - "**/package*.json"
-      - "**/*.ts"
+      - "**/*.{js,ts,md,yaml,yml,json}"
   push:
     paths:
-      - ".github/workflows/lint.yml"
-      - "**/tsconfig.json"
-      - "**/.eslintrc.js"
       - "**/.eslintignore"
-      - "**/package*.json"
-      - "**/*.ts"
+      - "**/*.{js,ts,md,yaml,yml,json}"
     branches-ignore:
       - "dependabot/*"
 
