--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "lint-travis": "lerna run lint-travis",
     "prepare": "npm run symlink && npm run clean-build",
     "pub-version": "lerna version --conventional-commits",
-    "pub": "npm install && npm test && npm run pub-version && lerna publish from-git",
+    "pub-version-pre": "lerna version --conventional-prerelease",
+    "pub-version-grad": "lerna version --conventional-graduate",
+    "pub": "npm install && npm test && lerna publish from-git",
+    "pub-next": "npm install && npm test && lerna publish from-git --dist-tag next",
     "symlink": "node build_tools/bin/symlink.js packages",
     "test-spec": "lerna run test-spec",
     "test-ts": "lerna run test-ts",
@@ -43,7 +46,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/configstore": "^4.0.0",
-    "@types/fs-extra": "^9.0.2",
+    "@types/fs-extra": "^9.0.3",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.15",
     "@types/micromatch": "^4.0.1",
@@ -54,23 +57,23 @@
     "ajv-cli": "^3.3.0",
     "chai": "^4.2.0",
     "coveralls": "^3.1.0",
-    "cspell-dict-en_us": "^1.2.30",
-    "cspell-dict-es-es": "^1.0.20",
-    "cspell-dict-nl-nl": "^1.0.25",
+    "cspell-dict-en_us": "^1.2.34",
+    "cspell-dict-es-es": "^1.0.24",
+    "cspell-dict-nl-nl": "^1.0.29",
     "globcat": "^1.3.3",
-    "jest": "^26.6.1",
+    "jest": "^26.6.3",
     "lerna": "^3.22.1",
     "lorem-ipsum": "^2.0.3",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
     "source-map-support": "^0.5.19",
-    "ts-jest": "^26.4.3",
+    "ts-jest": "^26.4.4",
     "ts-json-schema-generator": "^0.77.0",
-    "ts-loader": "^8.0.7",
+    "ts-loader": "^8.0.10",
     "tslint": "^6.1.2",
     "typescript": "^4.0.5",
-    "webpack": "^5.3.0",
-    "webpack-cli": "^4.1.0"
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   },
   "dependencies": {}
 }
