chore: Run prettier on MD, Yaml, and JSON files (#541)
* chore: Run prettier on Markdown

* chore: Run prettier on Yaml

* chore: Run prettier on JSON

* chore: Update Lint CI globs

Co-authored-by: Jason Dent <Jason3S@users.noreply.github.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,22 +2,14 @@ name: Lint
 on:
   pull_request:
     paths:
-      - '.github/workflows/lint.yml'
-      - '**/tsconfig.json'
-      - '**/.eslintrc.js'
-      - '**/.eslintignore'
-      - '**/package*.json'
-      - '**/*.ts'
+      - "**/.eslintignore"
+      - "**/*.{js,ts,md,yaml,yml,json}"
   push:
     paths:
-      - '.github/workflows/lint.yml'
-      - '**/tsconfig.json'
-      - '**/.eslintrc.js'
-      - '**/.eslintignore'
-      - '**/package*.json'
-      - '**/*.ts'
+      - "**/.eslintignore"
+      - "**/*.{js,ts,md,yaml,yml,json}"
     branches-ignore:
-      - 'dependabot/*'
+      - "dependabot/*"
 
 jobs:
   lint:
