--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,12 @@
 {
     "printWidth": 120,
-    "singleQuote": true
+    "singleQuote": true,
+    "overrides": [
+        {
+            "files": "**/*.{yaml,yml}",
+            "options": {
+                "singleQuote": false
+            }
+        }
+    ]
 }
