--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -9,19 +9,16 @@
   },
   "exports": {
     ".": "./dist/index",
+    "./app": "./dist/app.js",
     "./application": "./dist/application.js",
-    "./cli": "./dist/app.js"
+    "./dist/app": "./dist/app.js",
+    "./dist/application": "./dist/application.js"
   },
   "typesVersions": {
     ">=4.0": {
-      "cli": [
-        "dist/app"
-      ],
-      "dist/*": [
-        "dist/*"
-      ],
       "*": [
-        "dist/*"
+        "dist/*",
+        "*"
       ]
     }
   },
