--- a/packages/cspell-glob/package.json
+++ b/packages/cspell-glob/package.json
@@ -25,6 +25,7 @@
     "watch": "tsc -p . -w",
     "clean": "rimraf lib",
     "clean-build": "npm run clean && npm run build",
+    "prepare": "npm run build",
     "coverage": "jest --coverage",
     "test-watch": "jest --watch",
     "test": "jest"
