chore: Remove redunant gen-coverage target

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,7 +17,7 @@ jobs:
 
       - run: npm ci
 
-      - run: npm run gen-coverage
+      - run: npm run coverage
 
       - name: Coveralls cspell
         uses: coverallsapp/github-action@v1.1.2
