--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,4 @@
 {
-  "packages": [
-    "packages/*",
-    "test-packages/*"
-  ],
+  "packages": ["packages/*", "test-packages/*"],
   "version": "5.0.1-alpha.12"
 }
