--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "check-spelling": "npx cspell **/{*.ts,*.md}",
     "clean-build": "lerna run clean-build",
     "clean": "lerna run clean",
-    "coverage": "npm run gen-coverage",
-    "gen-coverage": "lerna run coverage --stream",
+    "coverage": "lerna run coverage --stream",
     "install": "lerna bootstrap --ci",
     "bootstrap": "lerna bootstrap",
     "lint": "eslint . --fix && prettier -w \"**/*.{md,yaml,yml,json}\"",
