--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "coverage": "npm run gen-coverage",
     "gen-coverage": "lerna run coverage",
     "install": "lerna bootstrap --ci",
-    "lint": "eslint . --fix",
-    "lint-ci": "eslint .",
+    "lint": "eslint . --fix && prettier -w \"**/*.{md,yaml,yml,json}\"",
+    "lint-ci": "eslint . && prettier -c \"**/*.{md,yaml,yml,json}\"",
     "prepare": "npm run symlink && npm run clean-build",
     "pub-version": "lerna version --conventional-commits",
     "pub-version-pre": "lerna version --conventional-prerelease",
