--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "cspell-dict-nl-nl": "^1.0.29",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
