--- a/.github/workflows/cspell.yml
+++ b/.github/workflows/cspell.yml
@@ -20,4 +20,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npx cspell "**/{*.ts,*.md}"
+      - run: npx cspell "**/*.*"
