--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,9 +33,7 @@ jobs:
 
       - run: npm test
 
-      - run: node ./bin.js trace test
-
-      - run: node ./bin.js "**/{*.ts,*.md}"
+      - run: node ./bin.js "**/*.*"
 
       # Ensure the repository is clean after build & test
       - run: git --no-pager diff --compact-summary --exit-code
