--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "lerna run build",
     "build-schema": "lerna run build-schema",
     "build-integration-tests": "cd ./integration-tests && npm i",
-    "check-spelling": "npx cspell **/{*.ts,*.md}",
+    "check-spelling": "npx cspell **/*.*",
     "clean-build": "lerna run clean-build",
     "clean": "lerna run clean",
     "coverage": "lerna run coverage --stream",
