--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,11 @@ jobs:
 
       - run: npm test
 
-      - run: node ./bin.js "**/*.*"
+      - name: verify trace command
+        run: node ./bin.js trace test
+
+      - name: verify the spell checker runs
+        run: node ./bin.js "**/*.*"
 
       # Ensure the repository is clean after build & test
       - run: git --no-pager diff --compact-summary --exit-code
