chore: Add eslint-plugin-node

--- a/packages/Samples/package.json
+++ b/packages/Samples/package.json
@@ -2,5 +2,12 @@
   "name": "cspell-tools-samples",
   "version": "5.0.1-alpha.6",
   "description": "Sample files used during unit tests",
-  "private": true
+  "private": true,
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"No test specified\""
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
