--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -2,7 +2,9 @@
   "name": "cspell-trie",
   "version": "5.0.1-alpha.12",
   "description": "Trie Data Structure reader for cspell",
-  "bin": "bin.js",
+  "bin": {
+    "cspell-trie": "bin.js"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
