chore: Cleanup cspell words and NPM targets (#580)
* chore: Remove old test-ts targets

* chore: Remove old test-spec target

* chore: Remove uncalled TSC alias targets

* chore: Flatten old generate-code-coverage target

* chore: Cleanup cspell words

* chore: Expand out test globs to include all files

* Make it clear what the steps do

* chore: Remove old Mocha references

Co-authored-by: Jason Dent <Jason3S@users.noreply.github.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,11 +33,11 @@ jobs:
 
       - run: npm test
 
-      - run: npm run test-spec
+      - name: verify trace command
+        run: node ./bin.js trace test
 
-      - run: node ./bin.js trace test
-
-      - run: node ./bin.js "**/{*.ts,*.md}"
+      - name: verify the spell checker runs
+        run: node ./bin.js "**/*.*"
 
       # Ensure the repository is clean after build & test
       - run: git --no-pager diff --compact-summary --exit-code
