--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "lerna run build",
     "build-schema": "lerna run build-schema",
     "build-integration-tests": "cd ./integration-tests && npm i",
-    "check-spelling": "npx cspell **/{*.ts,*.md}",
+    "check-spelling": "npx cspell **/*.*",
     "clean-build": "lerna run clean-build",
     "clean": "lerna run clean",
     "coverage": "lerna run coverage --stream",
@@ -23,8 +23,6 @@
     "pub": "npm install && npm test && lerna publish from-git",
     "pub-next": "npm install && npm test && lerna publish from-git --dist-tag next",
     "symlink": "node build_tools/bin/symlink.js packages test-packages",
-    "test-spec": "lerna run test-spec",
-    "test-ts": "lerna run test-ts",
     "test-watch": "lerna run --parallel test-watch",
     "test": "lerna run test && ajv -s ./cspell.schema.json -d cspell.json",
     "test-integrations": "cd ./integration-tests && npm run integration-tests",
