--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -18,10 +18,7 @@
     "clean-build": "npm run clean && npm run build",
     "compile": "tsc -p .",
     "watch": "tsc --watch -p .",
-    "tsc": "tsc -p .",
-    "tscv": "tsc -v",
-    "coverage": "npm run generate-code-coverage",
-    "generate-code-coverage": "jest --coverage",
+    "coverage": "jest --coverage",
     "test-watch": "jest --watch",
     "prepublishOnly": "npm run clean-build && npm test",
     "test": "jest"
