chore: Upgrade to jest 26.6.3

--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -97,6 +97,7 @@
     "@types/fs-extra": "^9.0.4",
     "@types/node": "^14.14.7",
     "cspell-dict-nl-nl": "^1.0.25",
+    "jest": "^26.6.3",
     "lorem-ipsum": "^2.0.3",
     "rimraf": "^3.0.2",
     "ts-json-schema-generator": "^0.78.0"
