--- a/packages/cspell-io/package.json
+++ b/packages/cspell-io/package.json
@@ -43,6 +43,7 @@
     "@types/fs-extra": "^9.0.4",
     "@types/node": "^14.14.7",
     "fs-extra": "^9.0.1",
+    "jest": "^26.6.3",
     "lorem-ipsum": "^2.0.3",
     "rimraf": "^3.0.2"
   }
