--- a/packages/cspell-trie-lib/package.json
+++ b/packages/cspell-trie-lib/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^14.14.7",
     "cspell-dict-en_us": "^1.2.34",
     "cspell-dict-es-es": "^1.0.24",
+    "jest": "^26.6.3",
     "rimraf": "^3.0.2"
   }
 }
