--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.4",
     "@types/node": "^14.14.7",
+    "jest": "^26.6.3",
     "rimraf": "^3.0.2"
   }
 }
