--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -79,6 +79,7 @@
     "@types/fs-extra": "^9.0.4",
     "@types/glob": "^7.1.3",
     "@types/minimatch": "^3.0.3",
+    "jest": "^26.6.3",
     "rimraf": "^3.0.2"
   }
 }
