chore: use rimraf instead of rm -rf in update-packages
There was a small change in cspell-util-bundle that was included

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test-watch": "lerna run --parallel test-watch",
     "test": "lerna run test && ajv -s ./cspell.schema.json -d cspell.json",
     "test-integrations": "cd ./integration-tests && npm run integration-tests",
-    "update-packages": "lerna exec \"npm update -S && rm -rf node_modules package-lock.json && npm i\" && lerna bootstrap"
+    "update-packages": "lerna exec \"npm update -S && rimraf node_modules package-lock.json && npm i\" && lerna bootstrap"
   },
   "repository": {
     "type": "git",
