--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "cspell monorepo.",
   "main": "bin.js",
+  "bin": {
+    "cspell-monorepo": "bin.js",
+    "symlink": "build_tools/bin/symlink.js"
+  },
   "private": true,
   "scripts": {
     "build": "lerna run build",
@@ -61,7 +65,9 @@
     "cspell-dict-nl-nl": "^1.0.29",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
