--- a/package.json
+++ b/package.json
@@ -77,8 +77,6 @@
     "shelljs": "^0.8.4",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.11",
-    "typescript": "^4.0.5",
-    "webpack": "^5.3.0",
-    "webpack-cli": "^4.2.0"
+    "typescript": "^4.0.5"
   }
 }
