--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test-watch": "lerna run --parallel test-watch",
     "test": "lerna run test && ajv -s ./cspell.schema.json -d cspell.json",
     "test-integrations": "cd ./integration-tests && npm run integration-tests",
-    "update-packages": "lerna exec \"npm update -S && rimraf node_modules package-lock.json && npm i\" && lerna bootstrap"
+    "update-packages": "lerna exec \"npm update -S && rimraf node_modules package-lock.json && npm i\" && lerna bootstrap --no-ci"
   },
   "repository": {
     "type": "git",
