--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -95,6 +95,7 @@
   "devDependencies": {
     "@types/configstore": "^4.0.0",
     "@types/fs-extra": "^9.0.4",
+    "@types/minimatch": "^3.0.3",
     "@types/node": "^14.14.7",
     "cspell-dict-nl-nl": "^1.0.25",
     "jest": "^26.6.3",
