--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,8 @@
 {
-  "packages": ["packages/*", "test-packages/*", "integration-tests"],
-  "version": "5.0.1-alpha.12"
+  "packages": [
+    "packages/*",
+    "test-packages/*",
+    "integration-tests"
+  ],
+  "version": "5.0.1-alpha.13"
 }
