fix: globbing for dependabot PR filtering

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,7 +21,7 @@ on:
       - "**/*.yml"
       - "**/*.yaml"
     branches-ignore:
-      - "dependabot/*"
+      - "dependabot/**"
 
 jobs:
   lint:
