--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test-watch": "lerna run --parallel test-watch",
     "travis-coverage": "npm run gen-coverage && globcat packages/*/coverage/lcov.info | coveralls",
     "test": "lerna run test && ajv -s ./cspell.schema.json -d cspell.json",
-    "update-packages": "lerna exec \"npm update -S && rm -rf node_modules package-lock.json && npm i\" && lerna bootstrap"
+    "update-packages": "lerna exec \"npm update -S && rm -rf node_modules package-lock.json && npm i\" && lerna bootstrap --no-ci"
   },
   "repository": {
     "type": "git",
@@ -47,7 +47,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/configstore": "^4.0.0",
-    "@types/eslint": "^7.2.4",
+    "@types/eslint": "^7.2.5",
     "@types/fs-extra": "^9.0.4",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.15",
@@ -55,8 +55,8 @@
     "@types/minimatch": "^3.0.3",
     "@types/node": "^14.14.7",
     "@types/shelljs": "^0.8.8",
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.0",
+    "@typescript-eslint/parser": "^4.8.0",
     "ajv-cli": "^3.3.0",
     "chai": "^4.2.0",
     "coveralls": "^3.1.0",
