--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "check-spelling": "npx cspell **/*.*",
     "clean-build": "lerna run clean-build",
     "clean": "lerna run clean",
-    "coverage": "lerna run coverage --stream",
+    "coverage": "lerna run coverage --stream && npm run coverage-collect",
+    "coverage-collect": "globcat packages/*/coverage/lcov.info > lcov.info",
     "install": "lerna bootstrap --ci",
     "bootstrap": "lerna bootstrap",
     "lint": "eslint . --fix && prettier -w \"**/*.{md,yaml,yml,json}\"",
@@ -57,6 +58,7 @@
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "globcat": "^1.3.3",
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
     "prettier": "^2.1.2",
