--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
     "prettier": "^2.1.2",
