ci: fix coveralls report (#599)
Collect the coverage locally, then send it to Coveralls.
Do not try to send the packages one-by-one.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "check-spelling": "cspell **/{*.ts,*.md}",
     "clean-build": "lerna run clean-build",
     "clean": "lerna run clean",
-    "coverage": "npm run gen-coverage",
-    "gen-coverage": "lerna run coverage",
+    "coverage": "lerna run coverage --stream && npm run coverage-collect",
+    "coverage-collect": "globcat packages/*/coverage/lcov.info > lcov.info",
     "install": "lerna bootstrap --ci",
     "lint": "eslint . --fix && prettier -w \"**/*.{md,yaml,yml,json}\"",
     "lint-ci": "eslint . && prettier -c \"**/*.{md,yaml,yml,json}\"",
