--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "lint-ci": "eslint . && prettier -c \"**/*.{md,yaml,yml,json}\"",
     "prepare": "npm run symlink && npm run clean-build",
     "pub-version": "lerna version --conventional-commits",
-    "pub-version-pre": "lerna version --conventional-prerelease",
-    "pub-version-grad": "lerna version --conventional-graduate",
+    "pub-version-pre": "lerna version --conventional-commits --conventional-prerelease",
+    "pub-version-grad": "lerna version --conventional-commits --conventional-graduate",
     "pub": "npm install && npm test && lerna publish from-git",
     "pub-next": "npm install && npm test && lerna publish from-git --dist-tag next",
     "symlink": "node build_tools/bin/symlink.js packages test-packages",
