--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -11,7 +11,7 @@ on:
       branch:
         description: 'Branch to run on "master" or "cspell4"'
         # Default value if no value is explicitly provided
-        default: 'master'
+        default: master
         # Input has to be provided for the workflow to run
         required: true
 
@@ -25,10 +25,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.inputs.branch }}
-      - name: Install 
+      - name: Install
         run: npm install
-#       - name: Test
-#         run: npm test
+      #       - name: Test
+      #         run: npm test
       - name: Setup Git
         run: |
           git config --global user.name 'Jason Dent'
@@ -39,4 +39,3 @@ jobs:
       - name: Version cspell4
         if: ${{ github.event.inputs.branch == 'cspell4' }}
         run: npm run pub-version -- -y
- 
