Add pub-lerna script

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pub-version-pre": "lerna version --conventional-prerelease",
     "pub-version-grad": "lerna version --conventional-graduate",
     "pub": "npm install && npm test && lerna publish from-git",
+    "pub-lerna": "lerna publish from-git",
     "pub-next": "npm install && npm test && lerna publish from-git --dist-tag next",
     "symlink": "node build_tools/bin/symlink.js packages",
     "test-spec": "lerna run test-spec",
