--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,6 +40,7 @@ jobs:
         run: |
           git config --global user.name 'Jason Dent'
           git config --global user.email 'jason@streetsidesoftware.nl'
+          git fetch --tags
       - name: Publish
         run: npm run pub-lerna -- -y --dist-tag "$NPM_TAG"
         env:
@@ -64,6 +65,7 @@ jobs:
         run: |
           git config --global user.name 'Jason Dent'
           git config --global user.email 'jason@streetsidesoftware.nl'
+          git fetch --tags
 
 #       - name: Publish Master
 #         if: ${{ github.ref == 'refs/heads/master' }}
