fix: force new version

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,7 @@
 cspell.schema.json
 tsconfig*.json
 integration-tests/config/config.json
+integration-tests/repositories/*/*/**
 cspell.json
 .vscode/
 [sS]amples/
