--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-trie",
-  "version": "5.0.1-alpha.15",
+  "version": "5.0.1",
   "description": "Trie Data Structure reader for cspell",
   "bin": {
     "cspell-trie": "bin.js"
@@ -38,7 +38,7 @@
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "commander": "^6.2.0",
-    "cspell-trie-lib": "^5.0.1-alpha.15",
+    "cspell-trie-lib": "^5.0.1",
     "fs-extra": "^9.0.1",
     "gensequence": "^3.1.1",
     "iterable-to-stream": "^1.0.1"
