--- a/packages/cspell-util-bundle/package.json
+++ b/packages/cspell-util-bundle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-util-bundle",
-  "version": "5.0.1-alpha.15",
+  "version": "5.0.1",
   "description": "This is a bundle of external libraries used by cspell bundled into a single `.js`",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
